fixed on iphone, that was kinda late

--- a/src/css/project.less
+++ b/src/css/project.less
@@ -53,6 +53,7 @@
   border-bottom: 1px solid black;
   @media @mobile {
     max-width: 100%;
+    width: 100%;
     font-size: 18px;
   }
   padding-top: 10px;
